tests/valid/function/local_let_rec_shadowing.facet
fn main() -> unrestricted isize {
  let rec f(x: unrestricted isize) -> unrestricted isize {
    x
  }
  in let f: unrestricted isize = 9 in f
}
