tests/invalid/reborrow/write_while_shared_reborrowed.facet
fn f(mut x: unrestricted isize) -> unrestricted () {
    let mut r: unrestricted &mut unrestricted isize = (&mut x) in
    let _r2: unrestricted &unrestricted isize = (&*r) in
    let _: unrestricted isize = (replace *r 99) in
    ()
}
